Add support for claude models via VertexAI and Bedrock in AnthropicAugmentedLLM (#297)
* Enable claude models from VertexAI and Bedrock through AnthropicAugmentedLLM

* Add configuration examples of Anthropic models through Bedrock and VertexAI

* Add other providers configuration examples to augmented LLMs documentation

* Set default model for AnthropicAugmentedLLM even if AnthropicSettings is not set

* Add installation instructions for Anthropic's Claude models via Bedrock and Vertex AI

* Flatten Anthropic settings for AWS Bedrock and Google Vertex AI

* Update default model to Claude Sonnet 4 for AnthropicAugmentedLLM

* Update AnthropicSettings to use provider enum

* docs: Update configuration for Anthropic models to use provider enum

* refactor: Remove unused fields from AnthropicSettings class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,16 @@ temporal = [
 anthropic = [
     "anthropic>=0.48.0",
 ]
+
+anthropic_bedrock = [
+    "anthropic[bedrock]>=0.52.0",
+]
+
+anthropic_vertex = [
+    "anthropic[vertex]>=0.52.0",
+    "google-cloud-aiplatform>=1.101.0",
+]
+
 bedrock = [
     "boto3>=1.37.23"
 ]
