make music theory server call succeed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ dev = [
     "trio>=0.30.0",
     "pytest-cov>=6.1.1",
     "httpx>=0.28.1",
+    "mcp-agent",
 ]
 
 [project.scripts]
@@ -114,3 +115,6 @@ mcp-agent = [ # TODO: should this be mcp_agent?
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+
+[tool.uv.sources]
+mcp-agent = { workspace = true }
